@@ -4,6 +4,9 @@ mac getIpByName liefert name von IPnum
 
 opsi-script (4.12.10.0) unreleased; urgency=medium
 
+  * [fix] osparser: doRegistryHackRegeditFormat / doRegistryHack
+          remove condition branch: 'if Is64BitSystem and ('software' = lowerCase(key0)) then'
+          (#4839, !155, d.oertel)
 
 -- j.werner <j.werner@uib.de> 04 May 2023
 
